--- a/README.org
+++ b/README.org
@@ -1,19 +1,55 @@
-
 #+TITLE: PyTorch Examples
+#+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
+#+OPTIONS: toc:2 num:nil
+#+STARTUP: latexpreview inlineimages
 
-Welcome to my repository of python scripts which demonstrate PyTorch in simple scenarios. This README  serves as the documentation and guide, where I lightly outline each scenario and present increasingly complex scripts which demonstrate PyTorch's tools.
+Welcome to my repository of machine learning notes and python scripts, scripts which demonstrate PyTorch in simple scenarios. Each section starts with a terse outline of the learning  method, discuss the relevant python scripts, each integrating PyTorch's library more than the last.
 
+GitHub does not render the equations well.  Read the web version of this README:  [[https://raw.githack.com/JohnNehls/PyTorchExamples/main/README.html][LINK HERE]].
 
 * Linear Regression
+** Prediction equation
+Linear Regression is used to predict a numerical value, $\hat{y}$, from observations, $X = \{x_0, x_1,\cdots,  x_{n-1}\}$ with the equation  $$\hat{y}(X) = \sum_{i=0}^{k-1} w_i f_i (X)$$  where the linear name (in linear regression)  comes from the fact that the equation is linear w.r.t. the weights, $w_i$.
+The combination of function and data point $f_i (X)$ is called a *feature*. Features make up the /basis/ for the regression, thus should be unique.
+
+*As long the prediction equation linear combination w.r.t. the weights, the features are up to us!*
+*** Examples
+W can have linear combination of the observations,
+  $$\hat{y} = w_0 x_0 + w_1 x_1 + w_2 x_2 + w_3 x_3$$
+or a linear combination of polynomials on one data point,
+  $$\hat{y} = w_0 + w_1 x + w_2 x^2 + w_3 x^3$$,
+even a linear combination of special functions with mixed kernel data points,  $$\hat{y} = w_0 \left( x_0 +x_3 \right) + w_1 arcsin(x_0) + tanh(x_1^2) + w_3 x_0^5$$.
+
+** Optimizing  the Weights with Gradient Descent
+The goal is to have the predictions, $\hat{y}(X)$, be accurate. This is done by having lots of data, $\{Y, X \}^i$ which now includes the observed values of the parameter we hope to predict, $y$, to compare to.
+We do this by minimizing the loss,
+$$loss = \frac{1}{N}\sum_{i=0}^{N-1}\left( y^i - \hat{y}(X^i) \right)^2$$,
+where the only free parameters are the weights in $\hat{y}$. In the linear regression paradigm, the features are chosen  before the optimization. /footnote:/ In deep learning choosing the features is also part of the optimization process.
+
+/footnote:/ In a linear algebra context, we would consider the fully system as matrix multiplication $$A\bf{x}=\bf{\hat{y}}$$, and be concerned whether it was over/under determined and how to /regularize/. In these notes we expect that the system is over determined (there are more data examples than features).
+
+In the machine learning context, we calculate the gradient of the loss w.r.t. the weights $\nabla loss$ and take a /step/ in that direction by updating the weights with
+$$w^{new} = w^{old} + n \nabla loss$$
+where $n$ is a scalar called the *learning rate*.
+
+This is done iteratively, either a number of iteration or until the loss reaches a desired threshold. It must be said that this scheme is a _local_ minimum finder; it will find a local minimum, but this is necessarily the lowest possible cost, also that the local minimum depends greatly on the starting set of weights.
+
+** Choice of Loss function
+It should be obvious that the choice of loss function greatly dictates the optimized weights. This is often stated as the crux of machine learning. At this point, we will only point out how it plays out the example of Linear Regression via  a small generalization of our previous loss function,
+
+$$loss(m) = \frac{1}{N} \sum_{i=0}^{N-1} \left( | y^i - \hat{y}(X^i) | \right)^m$$
+
+where the larger the value of $m$, the more large outliers in prediction error $$\left(|y - \hat{y}|\right)$$ contribute to the loss and, thus, the higher their priority for minimization during the optimization.
+
+** Examples in PyTorch
 - The following section shows PyTorch's use of Gradient Descent to fit a line to noisy data set.
 - The standard linear regression naming conventions are used:  the input data $x$ and $y$, the fit parameter $w$ and bias $b$, and the predicted dependent value,
-  $$\large \hat{y} = w x +b.$$
+  $$\hat{y} = w x +b.$$
 - Each regression is found using the *mean squared error* (MSE) cost function,
-  $$\large loss =  \frac{1}{N} \sum ( \hat{y}_i - y_i)^2.$$
+  $$loss =  \frac{1}{N} \sum (  y_i - \hat{y}_i)^2.$$
 - Each epoch moves the parameters such that the MSE($\hat{y},y)$ is minimized.
   - Note:  epoch 0 line in each figure displays the initial values of the parameters.
-
-** Simple Gradient Descent
+*** Simple Gradient Descent
 [[./LR_noDatasetClass.py][Example script]] using PyTorch for partial derivatives within a simple  linear regression on a  data set with normal noise added. This serves as the first step in using PyTorch as it does not employ any of the other PyTorch features which are the subject of the following examples.
 
 Simple gradient the via PyTorch's partial derivative.
@@ -33,12 +69,12 @@ Simple gradient the via PyTorch's partial derivative.
 
 [[./figs/LR_noDatasetClass.png]]
 
-*** Comments
+**** Comments
 - The optimal learning rate is directly connect to how good the initial guess is and how noisy the data is.
     - If there is a very large loss (error) and a moderate learning rate, the step is possibly too large, leading to an even larger loss and thus an even larger step, etc, until the loss is NA.
 - With a single learning rate, the slope learned much faster than the bias.
 
-** Mini-Batch Gradient Descent using Dataset and DataLoader
+*** Mini-Batch Gradient Descent using Dataset and DataLoader
 [[./LR_miniBatch_datasetDataLoader.py][Example script]] using mini-batch gradient descent for linear regression, while also using PyTorch's Dataset and DataLoader features.
 #+begin_src python  :results output
 class noisyLineData(Dataset):
@@ -59,12 +95,12 @@ trainloader = DataLoader(dataset = data, batch_size = 20)
 
 [[./figs/LR_miniBatch_datasetDataLoader.png]]
 
-*** Comments
+**** Comments
 - The *Dataset* and *DataLoader* concepts are simple and useful for abstracting out the data.
     - They will be particularly useful when the data is larger we can hold in the machine's memory.
 - With the same learning rates as for the full gradient descent, the mini-batch often learned considerably faster than simple Gradient Descent per epoch.
 
-** Mini-Batch Gradient Descent the full PyTorch Way
+*** Mini-Batch Gradient Descent the full PyTorch Way
 [[./LR_miniBatch_PyTorchWay.py][Example script]] of the same linear regression scenario, now using =nn.modules= for the model and the =optim= for optimization (the step):
 #+begin_src python  :results output
 class linear_regression(nn.Module):
@@ -93,18 +129,15 @@ optimizer = optim.SGD(model.parameters(), lr = 1e-4)
 
 * Logistic Regression for Linear Classification
 - We map the out put of a line/plane to [0,1] for classification. To do this, we use the sigmoid function,
-
-$$\Large \sigma(z) = \frac{1}{1+e^{-z}},$$
-
+$$\sigma(z) = \frac{1}{1+e^{-z}},$$
 as the simple binary function flattens the gradient and thus leads to slow learning.
 
 -  As a prediction we use,
-$$\Large \hat{y}= 1 \text{ if } \sigma(x) >0.5 \text{ else }\hat{y} =0.$$
+$$ \hat{y}= 1 \text{ if } \sigma(x) >0.5 \text{ else }\hat{y} =0.$$
 
 - We then use new loss to reflect the predictions, *Binary Cross Entropy Loss*.
 
-
-** Logistic Regression in 1D
+** Example: Logistic Regression in 1D
 [[./LogReg_PyTorch.py][Example script]]
 Now we use linear regression and with the sigmoid function to find the line/plane/hyperplane between two classes, here [0,1].
 
@@ -169,12 +202,11 @@ criterion = nn.BCELoss()
 *** Comments
 - line does not simply separate the data as y = 0.5 would do that and not give any prediction power.
 
-
 * Softmax Regression
 - Used to linearly classify between two or more classes.
 
 - Softmax Equation:
-$$\Large S(y_i) = \frac{exp(y_i)}{\sum exp(y_j)}$$
+$$S(y_i) = \frac{exp(y_i)}{\sum exp(y_j)}$$
   - where, notably, $S(y_i) \in [0,1]$ and $\sum S(y_i) = 1$
 
 - Softmax relies on the classic =argmax= programming function, $$\hat{y} = argmax_i(S(y_i))$$
@@ -203,12 +235,9 @@ $$\Large S(y_i) = \frac{exp(y_i)}{\sum exp(y_j)}$$
 
 * Neural Network
 
-
 * Deep Neural Network
 
-
 * Convolutional Neural Network
-
 
 * Notes
 ** argmax example:
@@ -227,7 +256,6 @@ $$\Large S(y_i) = \frac{exp(y_i)}{\sum exp(y_j)}$$
     | f(1)  | -1 |  1 |  0 |         1 |
     | f(4)  | -4 |  1 |  3 |         2 |
 
-
 ** Definitions
 - *Cost l(w,b)*: average loss
 -
@@ -239,7 +267,6 @@ $$\Large S(y_i) = \frac{exp(y_i)}{\sum exp(y_j)}$$
 
 *** torchvision.datasets
 
-
 ** Basic outline of a script
 1) Load Data
 2) Create Model
@@ -247,3 +274,9 @@ $$\Large S(y_i) = \frac{exp(y_i)}{\sum exp(y_j)}$$
 4) View Results
 
 ** Tensors
+
+* Local variables  :noexport:
+# Local Variables:
+# mode: org
+# eval: (add-hook 'after-save-hook 'jmn-org-export-html-on-save)
+# end:
