--- a/README.org
+++ b/README.org
@@ -227,8 +227,8 @@ criterion = nn.BCELoss()
 *** Comments
 - line does not simply separate the data as y = 0.5 would do that and not give any prediction power.
 
-* Neural Network
-** Softmax Classifier
+* Neural Networks for Classification
+** Single-Linear-Layer Softmax Classifier
 - Used to linearly classify between two or more classes.
 
 - Softmax Equation:
@@ -242,62 +242,21 @@ $$S(y_i) = \frac{exp(y_i)}{\sum exp(y_j)}$$
 - The complicated part here is the *loss*. How to incentivize this behavior with a decent gradient for learning.
 
 **** Softmax in PyTorch
-Example: [[./softMax_linLayer_makemore.md]], which can be opened in python via the file with the .py extension or converted to a Jupyter Notebook by executing:
+Example: [[./softMax_linLayer_makemore.md]], which can be run in VSCode with the Jupyter Notebook and Jupytext extensions or one can convert the file to a Jupyter Notebook by executing:
 
 #+begin_src shell
-jupytext softMax_linLayer_makemore.py -o softMax_linLayer_makemore.ipynb
+jupytext softMax_linLayer_makemore.md -o softMax_linLayer_makemore.ipynb
 #+end_src
+- may need to install first =pip install jupytext=
 
-As a side note, the Markdown is created with the following:
+
+** Multi-Layer Perceptron with Embedding
+Example [[./MLP_makemore.md]], which can be run in VSCode with the Jupytext extension or converted to a Jupyter Notebook by executing:
+
 #+begin_src shell
-jupytext softMax_linLayer_makemore.py -o softMax_linLayer_makemore.md
+jupytext softMax_linLayer_makemore.md -o softMax_linLayer_makemore.ipynb
 #+end_src
 
-Excerpt:
-#+begin_src python  :results output
-epochs = 10000 # decrease if not using a GPU! Takes about 1min with an rtx 4 series
-
-for i in range(epochs):
-    # Learning rate decreases from lr_start-> lr_end over epochs
-    # It is generally a good idea to reduce the learning rate like this
-    lr_start, lr_end = 100, 10
-    lr = lr_start - (lr_start-lr_end)*i/epochs
-
-    logit = xenc @ W # log counts
-    counts = logit.exp()
-    probs = counts/counts.sum(1,keepdim=True)
-
-    """
-    Kaparthy's Loss: log of the probabilities of correct pediction, log, negate, mean
-    This drives the exact element we want be 1 nearer to it.
-    - works much better than niave loss function
-    """
-    loss = -probs[torch.arange(num),ys].log().mean()
-
-    print(f'epoch: {i:04d},  lr: {lr:.3e}, loss: {loss}')
-
-    W.grad = None
-    loss.backward()
-
-    W.data += -lr*W.grad
-    W.grad.data.zero_()
-#+end_src
-
-***** Training
-- When =loss = nn.CrossEntropyLoss()=, PyTorch will automatically use Softmax classification.
-- The cod for training is identical to Linear Regression training-- ignoring data manipulation.
-
-***** Validation
-=argmax= is used to classify the output from the model
-#+begin_src python  :results output
-  for x_validation, y_validation in validation_loader:
-    z = model(x_test)
-    _,yhat = torch.max(z.data,1)
-    correct = correct + ( yhat == y_test ).sum().item()
-
-  accuracy = correct/N_validation
-  accuracy_list.append(accuracy)
-#+end_src
 
 * Deep Neural Network
 
